--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^6.13.4",
+    "axios": "^1.8.2",
     "bootstrap": "^5.3.3",
     "oidc-client-ts": "^3.1.0",
     "react": "^19.0.0",
