--- a/customHttp.yml
+++ b/customHttp.yml
@@ -1,6 +1,9 @@
-headers:
+customHeaders:
   - pattern: "/*"
     headers:
-      Access-Control-Allow-Origin: "https://bittasker.xyz"
-      Access-Control-Allow-Credentials: "true"
-      Access-Control-Allow-Headers: "Content-Type, Authorization"
+      - key: "Access-Control-Allow-Origin"
+        value: "https://bittasker.xyz"
+      - key: "Access-Control-Allow-Credentials"
+        value: "true"
+      - key: "Access-Control-Allow-Headers"
+        value: "Content-Type, Authorization"
