--- a/customHttp.yml
+++ b/customHttp.yml
@@ -7,3 +7,5 @@ customHeaders:
         value: "true"
       - key: "Access-Control-Allow-Headers"
         value: "Content-Type, Authorization"
+      - key: "Access-Control-Allow-Methods"
+        value: "OPTIONS, GET, POST, PUT, DELETE, HEAD"
