--- a/customHttp.yml
+++ b/customHttp.yml
@@ -1,11 +1,11 @@
 customHeaders:
-  - pattern: "/*"
+  - pattern: "/**"
     headers:
       - key: "Access-Control-Allow-Origin"
         value: "https://bittasker.xyz"
       - key: "Access-Control-Allow-Credentials"
         value: "true"
       - key: "Access-Control-Allow-Headers"
-        value: "Content-Type, Authorization"
+        value: "Content-Type"
       - key: "Access-Control-Allow-Methods"
-        value: "*"
+        value: "GET, POST, PUT, DELETE, OPTIONS"
