--- a/customHttp.yml
+++ b/customHttp.yml
@@ -1,11 +1,17 @@
 customHeaders:
-  - pattern: "/**"
+  - pattern: /images/*
     headers:
-      - key: "Access-Control-Allow-Origin"
-        value: "https://bittasker.xyz"
-      - key: "Access-Control-Allow-Credentials"
+      # Cache control for images (cache for 1 day)
+      - key: Cache-Control
+        value: "public, max-age=86400"  # Cache for 1 day (86400 seconds)
+  - pattern: /**
+    headers:
+      # CORS headers (if needed)
+      - key: Access-Control-Allow-Origin
+        value: https://bittasker.xyz
+      - key: Access-Control-Allow-Credentials
         value: "true"
-      - key: "Access-Control-Allow-Headers"
-        value: "Content-Type"
-      - key: "Access-Control-Allow-Methods"
-        value: "GET, POST, PUT, DELETE, OPTIONS"
+      - key: Access-Control-Allow-Headers
+        value: Content-Type
+      - key: Access-Control-Allow-Methods
+        value: GET, POST, PUT, DELETE, OPTIONS
