--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "aws-amplify": "^6.13.4",
     "axios": "^1.8.2",
     "bootstrap": "^5.3.3",
+    "ethers": "^6.13.5",
     "oidc-client-ts": "^3.1.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
