--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "axios": "^1.8.2",
     "bootstrap": "^5.3.3",
     "ethers": "^6.13.5",
+    "framer-motion": "^12.5.0",
     "oidc-client-ts": "^3.1.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-oidc-context": "^3.2.0",
